methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:18: error: not found: value setColor
  setColor(c)
  ^